--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,13 @@ project(SmartPersonalDashboard VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Quick)
+find_package(Qt6 REQUIRED COMPONENTS Quick Core)
 
 qt_standard_project_setup(REQUIRES 6.8)
 
 qt_add_executable(appSmartPersonalDashboard
     main.cpp
+    Backend/metricsservice.cpp
 )
 
 qt_add_qml_module(appSmartPersonalDashboard
@@ -17,25 +18,18 @@ qt_add_qml_module(appSmartPersonalDashboard
     VERSION 1.0
     QML_FILES
         Main.qml
-        QML_FILES UI/HomeComponent.qml
-        QML_FILES UI/RightComponent.qml
-        QML_FILES UI/LeftComponent.qml
-        QML_FILES UI/CenterComponent.qml
+        UI/HomeComponent.qml
+        UI/RightComponent.qml
+        UI/LeftComponent.qml
+        UI/CenterComponent.qml
 )
 
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
-set_target_properties(appSmartPersonalDashboard PROPERTIES
-#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appSmartPersonalDashboard
-    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
-    MACOSX_BUNDLE TRUE
-    WIN32_EXECUTABLE TRUE
-)
+# Include Backend directory
+target_include_directories(appSmartPersonalDashboard PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Backend)
 
+# Link required Qt modules
 target_link_libraries(appSmartPersonalDashboard
-    PRIVATE Qt6::Quick
+    PRIVATE Qt6::Quick Qt6::Core
 )
 
 include(GNUInstallDirs)
